[gd_scene load_steps=4 format=3 uid="uid://bpwsqlyws1eqw"]

[ext_resource type="Script" path="res://alarm_clock.gd" id="1_8627p"]
[ext_resource type="Texture2D" uid="uid://cgx5celc7w0wu" path="res://assets/black_screen.png" id="1_tmyes"]
[ext_resource type="Texture2D" uid="uid://cdbektym4wupo" path="res://assets/white_phone_screen.png" id="2_lmbl1"]

[node name="alarm_clock" type="Node2D"]
script = ExtResource("1_8627p")
metadata/_edit_horizontal_guides_ = []

[node name="black_screen" type="Sprite2D" parent="."]
position = Vector2(947, 537)
scale = Vector2(1.04688, 1.06296)
texture = ExtResource("1_tmyes")

[node name="white_phone_screen" type="Sprite2D" parent="."]
position = Vector2(960, 540)
rotation = 1.5708
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_lmbl1")

[node name="Timer" type="Timer" parent="."]
process_callback = 0

[node name="text" type="Label" parent="."]
offset_left = 560.0
offset_top = 482.0
offset_right = 1363.0
offset_bottom = 554.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "WAKE UP"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="count" type="Label" parent="."]
offset_right = 1922.0
offset_bottom = 598.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="get_up" type="Button" parent="."]
offset_left = 767.0
offset_top = 640.0
offset_right = 1185.0
offset_bottom = 759.0
theme_override_font_sizes/font_size = 50
text = "STOP"

[node name="dont_get_up" type="Button" parent="."]
offset_left = 765.0
offset_top = 831.0
offset_right = 1186.0
offset_bottom = 950.0
theme_override_font_sizes/font_size = 50
text = "SNOOZE"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="get_up" to="." method="_on_get_up_pressed"]
[connection signal="pressed" from="dont_get_up" to="." method="_on_dont_get_up_pressed"]
